--- a/css/styles.less
+++ b/css/styles.less
@@ -2,6 +2,10 @@ html {
    box-sizing: border-box;
    overflow-x: hidden;
    overflow-y: visible;
+
+   &.mobile {
+      overflow-y: hidden;
+   }
 }
 
 // --------------------------------------
@@ -130,22 +134,47 @@ body {
    background-position: center;
    width: 100%;
    height: 100vh;
-   transition: all 1.5s;
-   animation: animatedBackground 1.5s forwards;
+   transition: all 1.5s ease-in;
+   // animation: animatedBackground 1.5s forwards;
+
+   &:before {
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      // top: -50%;
+      // left: -50%;
+      z-index: -1;
+      background: url(https://images.unsplash.com/photo-1512914890251-2f96a9b0bbe2?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1351&q=80) 0 0 repeat;
+      background-size: cover;
+      background-position: center;
+      transition: all 1.5s ease-in;
+      // -webkit-transform: rotate(-30deg);
+      // transform: rotate(-30deg);
+      // animation: animatedBackground 1.5s forwards;
+   }
 
    &.active-0 {
-      background-image: url(https://images.unsplash.com/photo-1512914890251-2f96a9b0bbe2?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1351&q=80);
-      animation: animatedBackground 1.5s forwards;
+      &:before {
+         background-image: url(https://images.unsplash.com/photo-1512914890251-2f96a9b0bbe2?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1351&q=80);
+         transition: all 1.5s ease-in;
+      }
    }
 
    &.active-1 {
-      background-image: url(https://images.unsplash.com/photo-1494203484021-3c454daf695d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80);
-      animation: animatedBackground 1.5s forwards;
+      &:before {
+         transition: all 1.5s ease-in;
+         background-image: url(https://images.unsplash.com/photo-1494203484021-3c454daf695d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80);
+         // animation: animatedBackground 1.5s forwards;
+      }
    }
 
    &.active-2 {
-      background-image: url(https://images.unsplash.com/photo-1501685532562-aa6846b14a0e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80);
-      animation: animatedBackground 1.5s forwards;
+      &:before {
+         background-image: url(https://images.unsplash.com/photo-1501685532562-aa6846b14a0e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80);
+         // animation: animatedBackground 1.5s forwards;
+         transition: all 1.5s ease-in;
+      }
    }
 
    .nav__bar {
@@ -232,10 +261,15 @@ body {
 
                @media (max-width: @desktop) {
                   background-color: black;
-                  top: 1rem;
-                  left: -9rem;
+                  text-align: center;
+                  left: 0;
                   width: 92vw;
                   text-align: center;
+                  position: fixed;
+                  bottom: 0;
+                  height: 38%;
+                  width: 90%;
+                  z-index: 2;
 
                   li {
                      padding: 1.5rem !important;
@@ -643,6 +677,10 @@ body {
          box-shadow: none;
          color: @orange;
       }
+
+      @media (max-width: @desktop) {
+         margin-left: 0.5rem;
+      }
    }
 }
 
@@ -877,7 +915,7 @@ body {
    }
 }
 
-.contact {
+.footer-contact {
    .display-flex();
    position: relative;
    justify-content: flex-start;
@@ -891,7 +929,21 @@ body {
       padding: 0.2rem;
    }
 
-   .map-address {
+   .references {
+      .display-flex();
+      flex-direction: row;
+      justify-content: unset;
+      flex-wrap: wrap;
+      height: 12rem;
+      padding: 1rem;
+
+      img {
+         height: 4rem;
+         margin-right: 0.4rem;
+      }
+   }
+
+   .footer-contact__item {
       .display-flex();
       flex-direction: column;
       justify-content: unset;
@@ -928,7 +980,7 @@ body {
                   text-align: center;
                   padding: 0.5rem;
                   width: 7rem;
-                  margin: auto;
+                  // margin: auto;
                }
                &:hover {
                   color: @orange;
@@ -1061,10 +1113,14 @@ body {
             .display-flex();
             width: 16rem;
             justify-content: unset;
-            align-items: unset;
+            align-items: center;
             flex-direction: column;
             @media (max-width: @desktop) {
                width: 100%;
+
+               a {
+                  width: 14rem;
+               }
             }
          }
 
@@ -1101,19 +1157,10 @@ body {
                color: @orange;
             }
          }
-      }
-   }
-
-   .references {
-      .display-flex();
-      flex-direction: row;
-      justify-content: unset;
-      flex-wrap: wrap;
-      height: 12rem;
-
-      img {
-         height: 4rem;
-         margin-right: 0.4rem;
+         @media (max-width: @desktop) {
+            .display-flex();
+            flex-direction: column;
+         }
       }
    }
 }
@@ -1151,10 +1198,21 @@ body {
 }
 // header background
 @keyframes animatedBackground {
+   // 0% {
+   //    background-position: -100% 100%;
+   // }
+   // 100% {
+   //    background-position: 0% 100%;
+   // }
    0% {
-      background-position: -100% 0;
+      background-position: 20vw 100%;
+      background-image: translateX(50%);
+      // -webkit-transform: translateX(50%);
+      transform: translateX(100%);
    }
    100% {
-      background-position: 20% 100%;
+      background-position: 0vw 100%;
+      background-image: translateX(100%);
+      transform: translateX(0%);
    }
 }
