--- a/css/styles.less
+++ b/css/styles.less
@@ -137,6 +137,10 @@ body {
    transition: all 1.5s ease-in;
    // animation: animatedBackground 1.5s forwards;
 
+   @media (max-width: @desktop) {
+      // height: fit-content;
+   }
+
    &:before {
       content: "";
       position: absolute;
@@ -149,9 +153,6 @@ body {
       background-size: cover;
       background-position: center;
       transition: all 1.5s ease-in;
-      // -webkit-transform: rotate(-30deg);
-      // transform: rotate(-30deg);
-      // animation: animatedBackground 1.5s forwards;
    }
 
    &.active-0 {
@@ -256,7 +257,7 @@ body {
                position: absolute;
                transition: all 1.5s ease-in;
                opacity: 0;
-               animation: moveup 1s forwards;
+               animation: moveup 0.8s forwards;
                z-index: 2;
 
                @media (max-width: @desktop) {
@@ -298,6 +299,7 @@ body {
 
             &:hover {
                color: @orange;
+               cursor: pointer;
             }
 
             &.active {
@@ -317,6 +319,7 @@ body {
 
                   &:hover {
                      color: @orange;
+                     cursor: pointer;
                   }
                }
             }
@@ -328,7 +331,7 @@ body {
       .display-flex();
       flex-direction: column;
       width: 700px;
-      padding: 0.8rem;
+      padding: 2rem;
       margin-top: 6rem;
       background-color: fade(@black, 50);
       transition: all 1s;
@@ -344,13 +347,16 @@ body {
 
       @media (max-width: @desktop) {
          width: 250px;
-         margin-top: 5rem;
+         margin-top: 9rem;
       }
 
       .header-title {
          font-size: 2.2rem;
          color: @white;
          transition: all 1s;
+         margin: 0;
+         margin-bottom: 0.5rem;
+
          &:hover {
             color: @orange;
             cursor: pointer;
@@ -364,6 +370,8 @@ body {
       .header-subtitle {
          font-size: 1.3rem;
          color: @white;
+         margin: 0;
+         margin-bottom: 1rem;
 
          @media (max-width: @desktop) {
             font-size: 0.85rem;
@@ -383,7 +391,7 @@ body {
       .display-flex();
       flex-direction: column;
       width: 700px;
-      padding: 0.8rem;
+      padding: 2rem;
       margin-top: 6rem;
       background-color: fade(@black, 50);
       transition: all 1s;
@@ -399,13 +407,16 @@ body {
 
       @media (max-width: @desktop) {
          width: 250px;
-         margin-top: 5rem;
+         margin-top: 9rem;
       }
 
       .header-title {
          font-size: 2.2rem;
          color: @white;
          transition: all 1s;
+         margin: 0;
+         margin-bottom: 0.5rem;
+
          &:hover {
             color: @orange;
             cursor: pointer;
@@ -418,6 +429,8 @@ body {
       .header-subtitle {
          font-size: 1.3rem;
          color: @white;
+         margin: 0;
+         margin-bottom: 1.2rem;
 
          @media (max-width: @desktop) {
             font-size: 0.85rem;
@@ -437,7 +450,7 @@ body {
       .display-flex();
       flex-direction: column;
       width: 700px;
-      padding: 0.8rem;
+      padding: 2rem;
       margin-top: 6rem;
       background-color: fade(@black, 50);
       transition: all 1s;
@@ -453,13 +466,16 @@ body {
 
       @media (max-width: @desktop) {
          width: 250px;
-         margin-top: 5rem;
+         margin-top: 9rem;
       }
 
       .header-title {
          font-size: 2.2rem;
          color: @white;
          transition: all 1s;
+         margin: 0;
+         margin-bottom: 0.5rem;
+
          &:hover {
             color: @orange;
             cursor: pointer;
@@ -472,6 +488,8 @@ body {
       .header-subtitle {
          font-size: 1.3rem;
          color: @white;
+         margin: 0;
+         margin-bottom: 1.2rem;
 
          @media (max-width: @desktop) {
             font-size: 0.85rem;
@@ -495,7 +513,7 @@ body {
 
       @media (max-width: @desktop) {
          font-size: 1rem;
-         bottom: 12rem;
+         bottom: 1rem;
       }
 
       .dot {
@@ -525,6 +543,10 @@ body {
       width: 100%;
       background-color: fade(@black, 50);
 
+      @media (max-width: @desktop) {
+         display: none;
+      }
+
       .header-footer__item {
          background-position: center;
          background-size: cover;
@@ -532,7 +554,7 @@ body {
          height: 12rem;
          width: 15rem;
          padding: 0.2rem;
-         margin: 1rem 0;
+         margin: 1rem 1rem;
          transition: all 0.3s ease-in;
 
          &:hover {
@@ -541,9 +563,8 @@ body {
          }
 
          @media (max-width: @desktop) {
-            margin: 0.3rem 0;
-            width: 8rem;
-            height: 10rem;
+            margin: 0.3rem 0.3rem;
+            width: 100%;
          }
 
          .item-header__title {
@@ -627,7 +648,8 @@ body {
       padding: 4rem;
 
       @media (max-width: @desktop) {
-         padding: 1.8rem;
+         padding: 1.2rem;
+         flex-direction: column;
       }
 
       .news-subscribe__input {
@@ -639,12 +661,19 @@ body {
          color: @white;
          font-size: 1.1rem;
 
+         @media (max-width: @desktop) {
+            margin: 0;
+            margin: auto;
+            margin-bottom: 2rem;
+         }
+
          &::placeholder {
             font-size: 1.1rem;
             color: @white;
 
             @media (max-width: @desktop) {
                font-size: 0.9rem;
+               text-align: center;
             }
          }
 
@@ -679,14 +708,14 @@ body {
       }
 
       @media (max-width: @desktop) {
-         margin-left: 0.5rem;
+         margin-left: 0;
       }
    }
 }
 
 .market-grid {
    width: 100%;
-   height: 80vh;
+   height: 100vh;
    .display-flex();
    flex-direction: row;
    justify-content: flex-start;
@@ -919,7 +948,7 @@ body {
    .display-flex();
    position: relative;
    justify-content: flex-start;
-   width: 100%;
+   width: 97.9%;
    height: 33vh;
    background-color: @gray;
    padding: 1rem;
@@ -927,12 +956,14 @@ body {
    @media (max-width: @desktop) {
       height: fit-content;
       padding: 0.2rem;
+      width: 100%;
+      padding-bottom: 2rem;
    }
 
    .references {
       .display-flex();
       flex-direction: row;
-      justify-content: unset;
+      justify-content: center;
       flex-wrap: wrap;
       height: 12rem;
       padding: 1rem;
@@ -950,9 +981,13 @@ body {
       width: 100%;
       height: 100%;
 
+      @media (max-width: @desktop) {
+         padding: 1rem;
+      }
+
       .footer {
          .display-flex();
-         width: 100%;
+         width: 95%;
          height: 83%;
          align-items: baseline;
          flex-direction: row;
@@ -965,7 +1000,11 @@ body {
          }
 
          .footer__item {
-            width: 11rem;
+            width: 18rem;
+
+            @media (max-width: @desktop) {
+               padding-bottom: 1rem;
+            }
 
             .open-map {
                position: relative;
@@ -980,8 +1019,8 @@ body {
                   text-align: center;
                   padding: 0.5rem;
                   width: 7rem;
-                  // margin: auto;
                }
+
                &:hover {
                   color: @orange;
                   cursor: pointer;
@@ -1092,9 +1131,13 @@ body {
 
             h3 {
                color: @white;
-               font-size: 1rem;
+               font-size: 1.2rem;
                transition: all 0.5s;
                text-align: center;
+
+               @media (max-width: @desktop) {
+                  font-size: 1.2rem;
+               }
 
                &:hover {
                   color: @orange;
@@ -1103,15 +1146,15 @@ body {
             }
          }
 
-         span:nth-of-type(1) {
-            @media (max-width: @desktop) {
-               display: none;
-            }
-         }
+         // span:nth-of-type(1) {
+         //    @media (max-width: @desktop) {
+         //       display: none;
+         //    }
+         // }
 
          span:nth-of-type(3) {
             .display-flex();
-            width: 16rem;
+            width: 18rem;
             justify-content: unset;
             align-items: center;
             flex-direction: column;
@@ -1129,6 +1172,7 @@ body {
             font-size: 0.85rem;
             margin: 0;
             transition: all 0.5s;
+            text-align: center;
 
             @media (max-width: @desktop) {
                text-align: center;
@@ -1168,7 +1212,7 @@ body {
 // animation
 @keyframes moveup {
    0% {
-      transform: translateY(10rem);
+      transform: translateY(5rem);
    }
    100% {
       transform: translateY(1.31rem);
